Housing notebook updates

--- a/02_California_housing_prices_predictor/Housing.ipynb
+++ b/02_California_housing_prices_predictor/Housing.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# California housing prices predictor #\n",
+    "Analysis of the *California Housing Prices dataset* from the StatLib repository.\n",
+    "\n",
+    "This dataset is based on data from the 1990 California centsus.\n",
+    "\n",
+    "The goal of this excercise is to build a predictor for housing prices in California."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning ##"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1041,7 +1060,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyze the best model an its errors ##"
+    "## Feature importance ##"
    ]
   },
   {
@@ -1139,13 +1158,6 @@
     "* **Median income** is the number one predictor for housing prices\n",
     "* Final **RMSE** for the Random Forest model on the test set is about 48,090 USD"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
